# bcamp-dl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/templates/: pr-build.md
.github/workflows/: build.yml  release.yml  temp.yml  test.yml
src/bcamp_dl/: __init__.py  bcamp_dl.py  cli.py
