#########################
# Project and Packaging #
#########################
[project]
name = "bcamp-dl"
dynamic = ["version"]
description = "Download your collection from Bandcamp."
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "ReK42", email = "ReK42@users.noreply.github.com"},
]
maintainers = [
    {name = "ReK42", email = "ReK42@users.noreply.github.com"},
]
keywords = ["bandcamp", "music"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "browser-cookie3 == 0.19.1",
    "bs4 == 0.0.2",
    "requests == 2.32.3",
    "rich == 13.7.1"
]

[project.urls]
Repository = "https://github.com/ReK42/bcamp-dl"
Issues = "https://github.com/ReK42/bcamp-dl/issues"

[project.scripts]
bcamp-dl = "bcamp_dl.cli:main"

[project.optional-dependencies]
test = [
    "mypy == 1.11.1",
    "ruff == 0.5.5",
    "black == 24.4.2",
    "types-beautifulsoup4",
    "types-requests",
]
build = [
    "setuptools == 72.1.0",
    "setuptools-scm == 8.1.0",
    "build == 1.2.1",
    "twine == 5.1.1"
]

[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bcamp_dl = ["py.typed"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/bcamp_dl/_version.py"
tag_regex = '^(?:[\w-]+[-/])?(?P<version>[vV]?\d+(?:\.\d+){0,2}[^\+]*)(?:\+.*)?$'

###########################
# Development Environment #
###########################
[tool.black]

[tool.isort]
profile = "black"

[tool.mypy]
cache_dir = ".cache/mypy"
pretty = true
files = "src"

[[tool.mypy.overrides]]
module = "browser_cookie3"
ignore_missing_imports = true

[tool.ruff]
cache-dir = ".cache/ruff"
output-format = "full"
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",  # Missing type annotation for self in method
    "ANN102",  # Missing type annotation for cls in method
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "EXE001",  # Shebang is present but file is not executable
    "FBT002",  # Boolean default value in function definition
    "RET501",  # Do not explicitly return None in function if it is the only possible return value

    "CPY",     # flake8-copyright
    "D203",    # Use D211 instead
    "D213",    # Use D212 instead
    "I001",    # Use black instead

    "S",       # TODO: Fix and enable
    "BLE",     # TODO: Fix and enable
    "EM",      # TODO: Fix and enable
    "ISC",     # TODO: Fix and enable
    "TRY",     # TODO: Fix and enable
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.lint.mccabe]
max-complexity = 15
